# realm

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE  conf_tree  config.json  readme.api.md  readme.container.md  readme.md  rustfmt.toml
.github/actions/toolchain/: action.yml
.github/workflows/: build.yml  ci.yml  container-image.yml  cross_compile.yml  docker-image.yml  docker.yml  relay.yml  release.yml
assets/: conf_tree
examples/: balance.json  balance.toml  basic.json  basic.toml  full.json  full.toml  gen.sh  good.json  good.toml  legacy.json  tls.json  tls.toml  ws.json  ws.toml  wss.json  wss.toml
experimental/realm_agent/: Cargo.toml
experimental/realm_ctrl/: Cargo.toml
experimental/realm_x/: Cargo.toml
realm_core/: Cargo.toml  README.md
realm_core/src/: endpoint.rs  lib.rs  time.rs  trick.rs
realm_core/src/dns/: mod.rs
realm_core/src/hook/: mod.rs
realm_core/src/tcp/: hook.rs  middle.rs  mod.rs  plain.rs  proxy.rs  socket.rs  transport.rs
realm_core/src/udp/: batched.rs  middle.rs  mod.rs  socket.rs  sockmap.rs
realm_core/tests/: proxy_v1.rs  proxy_v2.rs  tcp.rs  udp.rs
realm_hook/: Cargo.toml  README.md  realm.h
realm_hook/examples/: allow_all.cpp  makefile  reject_all.cpp
realm_hook/src/: lib.rs  pre_conn.rs
realm_io/: Cargo.toml  README.md
realm_io/src/: bidi_copy.rs  buf.rs  lib.rs  mem_copy.rs  peek.rs  statistic.rs  zero_copy.rs
realm_io/src/linux/: mmsg.rs  mod.rs  zero_copy.rs
realm_lb/: Cargo.toml  README.md
realm_lb/src/: balancer.rs  ip_hash.rs  lib.rs  round_robin.rs
realm_syscall/: Cargo.toml  README.md
realm_syscall/src/: daemon.rs  lib.rs  nofile.rs  socket.rs
src/: api.rs  bin.rs  consts.rs  dns.rs  lib.rs  main.rs  relay.rs  resolver.rs  tcp.rs  udp.rs  utils.rs  zero_copy.rs
src/cmd/: flag.rs  mod.rs  nav.rs  sub.rs
src/conf/: dns.rs  dns_mode.rs  endpoint.rs  log.rs  mod.rs  net.rs
src/conf/legacy/: mod.rs
src/config/: dns_mode.rs  endpoint_config.rs  mod.rs
src/dns/: mod.rs  sys_dns.rs  trust_dns.rs
src/relay/: dns.rs  mod.rs  tcp.rs  types.rs  udp.rs  utils.rs  zero_copy.rs
src/relay/tcp/: haproxy.rs  mod.rs  tfo.rs  transport.rs  zio.rs
src/utils/: consts.rs  dns.rs  ex_types.rs  mod.rs  ref_types.rs  socket.rs  timeout.rs  types.rs
tests/: proxy_protocol_v1.rs  proxy_protocol_v2.rs  proxy_v1.rs  proxy_v2.rs  tcp.rs  udp.rs  zero_copy.rs
