[package]
name = "realm_hook"
version = "0.1.4"
authors = ["zephyr <i@zephyr.moe>"]
description = "Realm's flexible hooks."
repository = "https://github.com/zhboner/realm"
readme = "README.md"
documentation = "https://docs.rs/realm_hook"
keywords = ["ffi", "hook"]
edition = "2021"
license = "MIT"


[dependencies]
once_cell = "1"
libloading = "0.8"
