[package]
name = "realm_lb"
version = "0.1.0"
authors = ["zephyr <i@zephyr.moe>"]
description = "Realm's load balance strategies."
repository = "https://github.com/zhboner/realm"
readme = "README.md"
documentation = "https://docs.rs/realm_lb"
keywords = ["lb", "balance", "network"]
edition = "2021"
license = "MIT"

[dev-dependencies]
average = "0.13"
